Add PG Vector metadata filter on top of new PGVector store