@@ -8,6 +8,15 @@
   </parent>
   <artifactId>quarkus-langchain4j-pgvector-deployment</artifactId>
   <name>Quarkus LangChain4j - pgvector - Deployment</name>
+
+  <!-- issue with parametrized test for certain condition linked to LangChain4j being compiled in java 8 ? -->
+  <properties>
+     <argLine>
+        --add-opens java.base/java.lang=ALL-UNNAMED
+        --add-opens java.base/java.util=ALL-UNNAMED
+     </argLine>
+  </properties>
+
   <dependencies>
      <dependency>
         <groupId>io.quarkiverse.langchain4j</groupId>
@@ -45,7 +54,7 @@
     </dependency>
     <dependency>
         <groupId>io.quarkus</groupId>
-        <artifactId>quarkus-junit5-internal</artifactId>
+        <artifactId>quarkus-junit5</artifactId>
         <scope>test</scope>
     </dependency>
     <dependency>
